vXXX (XXX)
- small breaking changes to the page-based API - it's alpha for a reason
- add support for RunLengthDecode filters (thanks Bernerd Schaefer)
- add support for standard PDF encryption (thanks Evan Brunner)

v0.11.0.alpha (19th July 2011)
- introduce experimental new page-based API
  - old API is deprecated but will continue to work with no warnings
- add transparent caching of common objects to ObjectHash

v0.10.0 (6th July 2011)
- support multiple receivers within a single pass over a source file
  - massive time saving when dealing with multiple receivers

v0.9.3 (2nd July 2011)
- add PDF::Reader::Reference#hash method
  - improves behaviour of Reference objects when tehy're used as Hash keys

v0.9.2 (24th April 2011)
- add basic support for fonts with Identity-V encoding.
- bug: improve robustness of text extraction
  - thanks to Evan Arnold for reporting
- bug: fix loading of nested resources on XObjects
  - thanks to Samuel Williams for reporting
- bug: improve parsing of files with XRef object streams

v0.9.1 (21st December 2010)
- force gem to only install on ruby 1.8.7 or higher
  - maintaining supprot for earlier versions takes more time than I have
    available at the moment
- bug: fix parsing of obscure pdf name format
- bug: fix behaviour when loaded in confunction with htmldoc gem

v0.9.0 (19th November 2010)
- support for pdf 1.5+ files that use object and xref streams
- support streams that use a flate filter with the predictor option
- ensure all content instructions are parsed when split over multiple stream
  - thanks to Jack Rusher for reporting
- Various string parsing bug
  - some character conversions to utf-8 were failing (thanks Andrea Barisani)
  - hashes with nested hex strings were tokenising wronly (thanks Evan Arnold)
  - escaping bug in tokenising of literal strings (thanks David Westerink)
- Fix a bug that prevented PDFs with white space after the EOF marker from loading
  - thanks to Solomon White for reporting the issue