@@ -6,7 +6,7 @@ describe PDF::Reader::Filter do
 
   it "should inflate a RFC1950 (zlib) deflated stream correctly"
   it "should inflate a raw RFC1951 deflated stream correctly"
-  it "should inflate a deflated stream with predictors correctly" do
+  it "should inflate a deflated stream with PNG predictors correctly" do
     filter = PDF::Reader::Filter.new(:FlateDecode, :Columns => 5, :Predictor => 12)
     if File.respond_to?(:binread)
       deflated_data    = File.binread(File.dirname(__FILE__) + "/data/deflated_with_predictors.dat")
@@ -16,6 +16,15 @@ describe PDF::Reader::Filter do
       depredicted_data = File.open(File.dirname(__FILE__) + "/data/deflated_with_predictors_result.dat","r") { |f| f.read }
     end
     filter.filter(deflated_data).should eql(depredicted_data)
+  end
+
+  it "should inflate a deflated stream with tiff predictors correctly" do
+    filter         = PDF::Reader::Filter.new(:FlateDecode, :Columns => 5, :Predictor => 2, :Colors => 3)
+    original_data  = "abcabcabcabcabcabcabcabcabcabc"
+    predicted_data = "abc\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00abc\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00"
+    deflated_data  = Zlib::Deflate.deflate(predicted_data)
+
+    filter.filter(deflated_data).should eql(original_data)
   end
 
   it "should filter a lzw stream with no predictors correctly" do
@@ -28,19 +37,6 @@ describe PDF::Reader::Filter do
       decompressed_data = File.open(File.dirname(__FILE__) + "/data/lzw_decompressed.dat","r") { |f| f.read }
     end
     filter.filter(compressed_data).should eql(decompressed_data)
-  end
-
-  it "should raise an exception on LZW compressed streams that use predictors" do
-    if File.respond_to?(:binread)
-      compressed_data   = File.binread(File.dirname(__FILE__) + "/data/lzw_compressed.dat")
-    else
-      compressed_data   = File.open(File.dirname(__FILE__) + "/data/lzw_compressed.dat","r") { |f| f.read }
-    end
-
-    filter = PDF::Reader::Filter.new(:LZWDecode, :Predictor => 2)
-    lambda {
-      filter.filter(compressed_data)
-    }.should raise_error(PDF::Reader::UnsupportedFeatureError)
   end
 
   it "should filter a ASCII85 stream correctly" do
